
  [ Stéphane Graber ]
  * ubi-partman: Ignore None cell values, we'll get another event
    when they actually contain something anyway. (LP: #939450)
  * Fix set_indicator_keymaps to always send an array of strings to
    gsettings and also go through more of the possible language codes as
    Xkl doesn't seem to always work with part2_code (LP: #955844)

 -- Stéphane Graber <stgraber@ubuntu.com>  Thu, 15 Mar 2012 16:23:19 -0400

ubiquity (2.9.28) precise; urgency=low

  * ubiquity-bluetooth-agent: Don't touch /tmp/ubiquity-bluetooth-done
    if the file already exists. (LP: #951402)
  * gtk-ui: Drop poke_screensaver and replace by code disabling it in
    gsettings. (LP: #951336)
  * Replace ubuntu_installed.png by a scaled down version (LP: #750134)
  * Enable test_same_ubuntu_only making sure we don't get offered an
    'upgrade' to the same version of Ubuntu.
  * Add test_newer_ubuntu_only ensuring ubiquity doesn't offer a downgrade.
  * Automatic update of included source packages: user-setup
    1.41ubuntu1.

 -- Stéphane Graber <stgraber@ubuntu.com>  Tue, 13 Mar 2012 19:21:21 -0400

ubiquity (2.9.27) precise; urgency=low

  * Port keyboard indicator from xklavier to Xkl and from gconf to gsettings.
    Update the test accordingly. (LP: #950087, LP: #800561)
  * Add bin/ubiquity-bluetooth-agent, a bluetooth agent allowing any HID
    bluetooth device for 5 minutes, then spawning bluetooth-applet if
    available, otherwise simply dies.
  * Start bluetooth-applet from ubiquity-dm (LP: #644198)
  * Copy /var/lib/bluetooth to /target/var/lib/bluetooth to keep the list
    of trusted devices on the target system. (LP: #644198)
  * Update PO template and translations for new bluetooth string.
  * Automatic update of included source packages: netcfg 1.68ubuntu14,
    partman-auto 93ubuntu20, partman-auto-loop 0ubuntu21.

 -- Stéphane Graber <stgraber@ubuntu.com>  Fri, 09 Mar 2012 12:11:19 -0500

ubiquity (2.9.26) precise; urgency=low
